--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ if (useMirror) apply from: "mirror.gradle"
 apply plugin: "net.minecraftforge.gradle.forge"
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
-version = "1.0.0.a"
+version = "1.0.1.5"
 group = "com.ideallandframework.moremomostories" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "moremomostories"
 
